--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,16 @@ dependencies:
     sdk: flutter
 
 
+  bottom_navy_bar: ^6.0.0
+  get: ^4.6.6
+  intl: ^0.18.0
+  url_launcher: ^6.0.20
+  contacts_service: ^0.6.3
+  permission_handler: ^10.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
